text box pretty

--- a/frontPage.html
+++ b/frontPage.html
@@ -11,11 +11,13 @@
     <title>TYPE RACER</title>
   </head>
   <body>
-    <div class="input-group mb-3">
-    <div class="input-group-prepend">
+    <div class = "container mt-5">
+    <div class = "d-flex justify-content-center">
+      <div class="input-group-prepend col-md-8">
+        <input type="text" class="form-control" placeholder="TYPE BITCHES">
+      </div>
     </div>
-      <input type="text" class="form-control" placeholder="TYPE BITCHES" aria-label="Username">
-    </div>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
