--- a/frontPage.html
+++ b/frontPage.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <div class = "container mt-5">
-    <div class = "d-flex justify-content-center">
+    <div class = "d-flex flex-column justify-content-center">
+      <div>
+          Text that the user types
+      </div>
       <div class="input-group-prepend col-md-8">
         <input type="text" class="form-control" placeholder="TYPE BITCHES">
       </div>
