--- a/typingPage.html
+++ b/typingPage.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class = "container mt-5">
-    <div class = "d-flex flex-column justify-content-center">
+    <div class = "d-flex flex-column">
       <div>
           Text that the user types
       </div>
@@ -20,6 +20,13 @@
         <input type="text" class="form-control" placeholder="TYPE BITCHES">
       </div>
     </div>
+
+
+    <div class="d-flex flex-column">
+  <div class="p-2 bg-info">Flex item 1</div>
+  <div class="p-2 bg-warning">Flex item 2</div>
+  <div class="p-2 bg-primary">Flex item 3</div>
+</div>
   </div>
 
     <!-- Optional JavaScript -->
