--- a/typingPage.html
+++ b/typingPage.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>TYPE RACER</title>
+    <script src = "./display.js"></script>
   </head>
   <body>
     <div class = "container mt-5">
@@ -17,7 +18,7 @@
           Text that the user types
       </div>
       <div class="input-group-prepend col-md-8">
-        <input type="text" class="form-control" placeholder="TYPE BITCHES">
+        <input type="text" id="in" class="form-control" placeholder="TYPE BITCHES"/>
       </div>
     </div>
   </div>
