--- a/typingPage.html
+++ b/typingPage.html
@@ -14,6 +14,7 @@
   <body>
     <div class = "container mt-5">
     <div class = "d-flex flex-column">
+      <h1 id='main_text'></h1>
       <div>
           Text that the user types
       </div>
