--- a/typingPage.html
+++ b/typingPage.html
@@ -14,9 +14,10 @@
   <body>
     <div class = "container mt-5">
     <div class = "d-flex flex-column">
-      <h1 id='main_text'></h1>
+      <h1>TypeRacer</h1>
+      <p id='main_text'>This is what we were going to use to test this things out </p>
       <div>
-          Text that the user types
+          type here
       </div>
       <div class="input-group-prepend col-md-8">
         <input type="text" id="in" class="form-control" placeholder="TYPE BITCHES"/>
