added backspace functionality

--- a/typingPage.html
+++ b/typingPage.html
@@ -15,11 +15,7 @@
     <div class = "container mt-5">
     <div class = "d-flex flex-column">
       <h1>TypeRacer</h1>
-      <p id = "correct_text">OOH WHOA OOH whoa, ooh whoa
-                        You know you love me, I know you care
-                        Just shout whenever and I'll be there
-                        You are my love, you are my heart
-                        And we will never, ever, ever be apart</p>
+      <p id = "correct_text">OOH WHOA OOH whoa, ooh whoa You know you love me, I know you care Just shout whenever and I'll be there You are my love, you are my heart And we will never, ever, ever be apart</p>
       <p id='main_text'></p>
       <div>
           type here
