--- a/typingPage.html
+++ b/typingPage.html
@@ -16,12 +16,12 @@
     <div class = "d-flex flex-column">
       <h1>TypeRacer</h1>
       <p id = "correct_text">OOH WHOA OOH whoa, ooh whoa You know you love me, I know you care Just shout whenever and I'll be there You are my love, you are my heart And we will never, ever, ever be apart</p>
-      <p id='main_text'></p>
+      <p id='input_text'></p>
       <div>
           type here
       </div>
       <div class="input-group-prepend col-md-8">
-        <input type="text" id="in" class="form-control" placeholder="TYPE BITCHES"/>
+        <input type="text" id="in" class="form-control" placeholder="you better type fast!"/>
       </div>
     </div>
   </div>
