--- a/typingPage.html
+++ b/typingPage.html
@@ -9,79 +9,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel ="stylesheet" href = "static/my_style.css">
     <title>TypeRacer</title>
-    <style>
-    mark{
-        background: transparent;
-        color: green;
-        text-decoration: underline;
-    }
-
-    mark.markincorrect{
-        background: red;
-        opacity: .5;
-        color: black;
-    }
-
-    body {
-      font-family: sans-serif;
-      display: grid;
-      height: 100vh;
-      place-items: center;
-    }
-
-    .base-timer {
-      position: relative;
-      width: 40px;
-      height: 40px;
-    }
-
-    .base-timer__svg {
-      transform: scaleX(-1);
-    }
-
-    .base-timer__circle {
-      fill: none;
-      stroke: none;
-    }
-
-    .base-timer__path-elapsed {
-      stroke-width: 4px;
-      stroke: grey;
-    }
-
-    .base-timer__path-remaining {
-      stroke-width: 4px;
-      stroke-linecap: round;
-      transform: rotate(90deg);
-      transform-origin: center;
-      transition: 1s linear all;
-      fill-rule: nonzero;
-      stroke: currentColor;
-    }
-
-    .base-timer__path-remaining.green {
-      color: rgb(65, 184, 131);
-    }
-
-    .base-timer__path-remaining.orange {
-      color: orange;
-    }
-
-    .base-timer__path-remaining.red {
-      color: red;
-    }
-
-    .base-timer__label {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      top: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 15px;
-    }
-    </style>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
@@ -90,7 +17,7 @@
       <h1>TypeRacer</h1>
     </div>
     <br/>
-    <div class="row">
+    <div id="progress_bars" class="row">
       <div class="progress active col-12">
         <div id="prog"class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;"></div>
       </div>
