mult players can connect, ready up, and then type successfuylly when all are ready

--- a/typingPage.html
+++ b/typingPage.html
@@ -25,9 +25,9 @@
       </p>
       <!-- <p id='input_text'></p> -->
       <div class="row">
-      <label for="in" class="col-md-2 col-form-label">Type Here: </label>
+      <label for="in" class="col-md-2 col-form-label" >Type Here: </label>
       <div class="input-group-prepend col-md-9">
-        <input type="text" id="in" class="form-control" placeholder="you better type fast!"/>
+        <input type="text" id="in" class="form-control" readonly = true placeholder="you better type fast!"/>
       </div>
       <div class = "col-md-1">
         <div id="app">
