timer is working, but not how it should be with mult players

--- a/typingPage.html
+++ b/typingPage.html
@@ -43,6 +43,8 @@
       <button type="button" class="btn btn-danger" id = "readyButton" onclick = "buttonClick()">Ready</button>
       <div id = "start">
       </div>
+      <div id = "startTimer">
+      </div>
     </div>
   </div>
   </div>
