prog bar gap issue is fixed, need to just add name

--- a/typingPage.html
+++ b/typingPage.html
@@ -15,12 +15,13 @@
     <div class = "container mt-1">
       <h1>TypeRacer</h1>
     <br/>
-    <div id="progress_bars" class="row ml-1">
-    </div>
+
     <br/>
     <br/>
     <div class = "row">
     <div class = "flex-md-column col-md-9">
+      <div id="progress_bars" class="row" >
+      </div>
       <p id = "correct_text" class = "alert alert-info">Mr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank you very much. They were the last people you'd expect to be involved in anything strange or mysterious, because they just didn't hold with such nonsense.
       </p>
       <!-- <p id='input_text'></p> -->
