connection messages, spectators, game start time

--- a/typingPage.html
+++ b/typingPage.html
@@ -43,6 +43,8 @@
     <div class = "col-md-3">
       <button type="button" class="btn btn-danger" id = "readyButton" onclick = "buttonClick()">Ready</button>
       <div id = "start">
+        <p id = "whoReady">
+        </p>
       </div>
       <div id = "startTimer">
       </div>
