--- a/typingPage.html
+++ b/typingPage.html
@@ -42,7 +42,7 @@
     </div>
     <div class = "col-md-3">
       <button type="button" class="btn btn-danger" id = "readyButton" onclick = "buttonClick()">Ready</button>
-      <div id = "start">
+      <div id = "gameInfo">
         <p id = "whoReady">
         </p>
       </div>
