--- a/typingPage.html
+++ b/typingPage.html
@@ -11,47 +11,73 @@
     <title>TypeRacer</title>
     <script src="/socket.io/socket.io.js"></script>
   </head>
+
+
+
   <body>
     <div class = "container mt-1">
       <h1>TypeRacer</h1>
     <br/>
 
+
     <div id="nameSpace">
       <form id="name_form" class="form-inline">
           <input type="text" id="name_in" class="form-control mr-sm-2" placeholder="Name"/>
-          <button type="button" class="btn btn-success" id = "nameButton" style="visibility:visible" onclick = "submitName()">Submit</button>
+          <button type="button" class="btn btn-danger" id = "readyButton" onclick = "readyBttnClick()">Ready</button>
           <div id="name_feedback">
           </div>
       </form>
     </div>
     <br/>
+
+
     <div class = "row">
-    <div class = "flex-md-column col-md-9">
-      <div id="progress_bars" class="row" >
-      </div>
-      <p id = "correct_text" class = "alert alert-info">Mr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank you very much. They were the last people you'd expect to be involved in anything strange or mysterious, because they just didn't hold with such nonsense.
-      </p>
-      <!-- <p id='input_text'></p> -->
-      <div class="row">
-      <label for="in" class="col-md-2 col-form-label" >Type Here: </label>
-      <div class="input-group-prepend col-md-9">
-        <input type="text" id="in" class="form-control" readonly = true placeholder="you better type fast!"/>
-      </div>
-      <div class = "col-md-1">
-        <div id="app">
+      <div class = "flex-md-column col-md-9">
+        <div id="progress_bars" class="row" >
         </div>
-      </div>
-    </div>
-    <br/>
-    <div class="row col-3">
+        <p id = "correct_text" class = "alert alert-info">Mr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank you very much. They were the last people you'd expect to be involved in anything strange or mysterious, because they just didn't hold with such nonsense.</p>
+          <div class="row">
+            <label for="in" class="col-md-2 col-form-label" >Type Here: </label>
+              <div class="input-group-prepend col-md-9">
+                <input type="text" id="in" class="form-control" readonly = true placeholder="you better type fast!"/>
+              </div>
+          <div class = "col-md-1">
+          <div id="app">
+          </div>
+          </div>
+          </div>
+      <br/>
+      <div class="row col-3">
       <p id="wpm">wpm: </p>
-    </div>
-    </div>
+      </div>
+      </div>
     <div class = "col-md-3">
-      <button type="button" style="visibility:hidden" class="btn btn-danger" id = "readyButton" onclick = "buttonClick()">Ready</button>
       <div id = "gameInfo">
         <p id = "whoReady">
         </p>
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Game Status</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+                <td>Mark</td>
+                <td>Otto</td>
+            </tr>
+            <tr>
+                <td>Jacob</td>
+                <td>Thornton</td>
+            </tr>
+            <tr>
+                <td>Larry</td>
+                <td>the Bird</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div id = "startTimer">
       </div>
