player ready table is working, other player ready messages have been commented out

--- a/typingPage.html
+++ b/typingPage.html
@@ -63,19 +63,8 @@
             </tr>
           </thead>
 
-          <tbody>
-            <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-            </tr>
-            <tr>
-                <td>Jacob</td>
-                <td>Thornton</td>
-            </tr>
-            <tr>
-                <td>Larry</td>
-                <td>the Bird</td>
-            </tr>
+          <tbody id = "playerInfo">
+
           </tbody>
         </table>
       </div>
