--- a/roomsPage.html
+++ b/roomsPage.html
@@ -26,11 +26,19 @@
         <tbody>
           <tr>
             <th scope="row">Typing Room #1</th>
-            <td><button type="button" class="btn btn-success" id = "room1" onClick = "joinRoom(this.id)">Join Room</button></td>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room1" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
           </tr>
           <tr>
             <th scope="row">Typing Room #2</th>
-            <td><button type="button" class="btn btn-success" id = "room2" onClick = "joinRoom(this.id)">Join Room</button></td>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room2" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
           </tr>
       </tbody>
     </table>
