splitting up into diff files

--- a/roomsPage.html
+++ b/roomsPage.html
@@ -27,7 +27,7 @@
           <tr>
             <th scope="row">Typing Room #1</th>
             <td>
-              <form action="/type">
+             <form action="/type" target = "_blank">
                 <button type="submit" class="btn btn-success" id = "room1" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
@@ -52,8 +52,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="static/display.js"></script>
-    <script src="static/game.js"></script>
+    <!-- <script src="static/display.js"></script> -->
+    <script src="static/roomsGame.js"></script>
     <script src="static/mark.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
