--- a/roomsPage.html
+++ b/roomsPage.html
@@ -47,6 +47,70 @@
               </form>
             </td>
           </tr>
+          <tr>
+            <th scope="row">Typing Room #3</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room3" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #4</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room4" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #5</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room5" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #6</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room6" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #7</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room7" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #8</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room8" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #9</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room9" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Typing Room #10</th>
+            <td>
+              <form action="/type">
+                <button type="submit" class="btn btn-success" id = "room10" onClick = "joinRoom(this.id)">Join Room</button>
+              </form>
+            </td>
+          </tr>
       </tbody>
     </table>
     </div>
