--- a/roomsPage.html
+++ b/roomsPage.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="/logos/favicon.jpg">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,6 +21,7 @@
   </head>
 
   <body>
+    <img src = "logos/TypeRunner_Main_Logo.png" alt = "TypeRunner_Small_Logo" style = "height: 202px; width: 415px;">
     <div class = "container">
     <div class = "row">
       <div class = "col-md-8">
@@ -116,7 +118,7 @@
     </div>
     <div class = "col-md-4">
       <input type = "text" id="room_in" class="form-control mb-3" placeholder="Enter New Room Name"/>
-      <button type="button" class="btn btn-primary" id = "newRoom">Create New Room</button>
+      <button type="button" class="btn btn-success" id = "newRoom">Create New Room</button>
     </div>
     </div>
   </div>
