--- a/roomsPage.html
+++ b/roomsPage.html
@@ -21,10 +21,10 @@
   </head>
 
   <body>
-    <img src = "logos/TypeRunner_Main_Logo.png" alt = "TypeRunner_Small_Logo" style = "height: 202px; width: 415px;">
+    <img src = "logos/TypeRunner_Main_Logo.svg" alt = "TypeRunner_Main_Logo" style = "height: 415px; width: 415px;">
     <div class = "container">
     <div class = "row">
-      <div class = "col-md-8">
+      <div class = "col-md-12">
       <table class="table table-hover">
         <thead>
           <tr>
@@ -116,10 +116,10 @@
       </tbody>
     </table>
     </div>
-    <div class = "col-md-4">
+    <!-- <div class = "col-md-4">
       <input type = "text" id="room_in" class="form-control mb-3" placeholder="Enter New Room Name"/>
       <button type="button" class="btn btn-success" id = "newRoom">Create New Room</button>
-    </div>
+    </div> -->
     </div>
   </div>
 
