--- a/roomsPage.html
+++ b/roomsPage.html
@@ -34,7 +34,7 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">Typing Room #1</th>
+            <th scope="row">Ann Arbor</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room1" onClick = "joinRoom(this.id)">Join Room</button>
@@ -42,7 +42,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #2</th>
+            <th scope="row">New York</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room2" onClick = "joinRoom(this.id)">Join Room</button>
@@ -50,7 +50,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #3</th>
+            <th scope="row">Los Angeles</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room3" onClick = "joinRoom(this.id)">Join Room</button>
@@ -58,7 +58,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #4</th>
+            <th scope="row">Tokyo</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room4" onClick = "joinRoom(this.id)">Join Room</button>
@@ -66,7 +66,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #5</th>
+            <th scope="row">Paris</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room5" onClick = "joinRoom(this.id)">Join Room</button>
@@ -74,7 +74,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #6</th>
+            <th scope="row">Mumbai</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room6" onClick = "joinRoom(this.id)">Join Room</button>
@@ -82,7 +82,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #7</th>
+            <th scope="row">Cancun</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room7" onClick = "joinRoom(this.id)">Join Room</button>
@@ -90,7 +90,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #8</th>
+            <th scope="row">Cape Town</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room8" onClick = "joinRoom(this.id)">Join Room</button>
@@ -98,7 +98,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #9</th>
+            <th scope="row">Brazil</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room9" onClick = "joinRoom(this.id)">Join Room</button>
@@ -106,7 +106,7 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">Typing Room #10</th>
+            <th scope="row">London</th>
             <td>
               <form action="/type">
                 <button type="submit" class="btn btn-success" id = "room10" onClick = "joinRoom(this.id)">Join Room</button>
