--- a/roomsPage.html
+++ b/roomsPage.html
@@ -37,7 +37,7 @@
             <th scope="row">Ann Arbor</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room1" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Ann Arbor" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -45,7 +45,7 @@
             <th scope="row">New York</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room2" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "New York" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -53,7 +53,7 @@
             <th scope="row">Los Angeles</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room3" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Los Angeles" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -61,7 +61,7 @@
             <th scope="row">Tokyo</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room4" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Tokyo" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -69,7 +69,7 @@
             <th scope="row">Paris</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room5" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Paris" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -77,7 +77,7 @@
             <th scope="row">Mumbai</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room6" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Mumbai" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -85,7 +85,7 @@
             <th scope="row">Cancun</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room7" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Cancun" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -93,7 +93,7 @@
             <th scope="row">Cape Town</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room8" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Cape Town" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -101,7 +101,7 @@
             <th scope="row">Brazil</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room9" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "Brazil" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
@@ -109,7 +109,7 @@
             <th scope="row">London</th>
             <td>
               <form action="/type">
-                <button type="submit" class="btn btn-success" id = "room10" onClick = "joinRoom(this.id)">Join Room</button>
+                <button type="submit" class="btn btn-success" id = "London" onClick = "joinRoom(this.id)">Join Room</button>
               </form>
             </td>
           </tr>
